Multimedia [homework]: add button play on mobile and some fixes

--- a/src/blocks/AudioAnalyser/AudioAnalyser.scss
+++ b/src/blocks/AudioAnalyser/AudioAnalyser.scss
@@ -11,3 +11,10 @@
     opacity: 0;
   }
 }
+
+@media (max-width: 650px) {
+  .AudioAnalyser {
+    right: 30px;
+    bottom: 120px;
+  }
+}
