--- a/src/content/cctv/PageContent.scss
+++ b/src/content/cctv/PageContent.scss
@@ -5,6 +5,7 @@
   grid-template-columns: auto minmax(100px, calc((100vh - 160px) * 1.75)) auto;
   grid-template-rows: 1fr;
   position: relative;
+  padding-top: 65px;
 
   &-VideoGrid {
     display: grid;
@@ -15,6 +16,13 @@
 
 .VideoGrid {
   &-ButtonClose {
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+    z-index: 5;
+  }
+
+  &-ButtonPlay {
     position: absolute;
     bottom: 30px;
     right: 30px;
@@ -35,5 +43,31 @@
   &-ContrastController {
     bottom: 44px;
     left: 270px;
+  }
+}
+
+@media (max-width: 650px) {
+  .PageContent {
+    padding: 50px 25px 0;
+    box-sizing: border-box;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+
+    &-VideoGrid {
+      grid-template-columns: 1fr;
+      grid-column: auto;
+    }
+  }
+
+  .VideoGrid {
+    &-LightController {
+      bottom: 44px;
+      left: 30px;
+    }
+
+    &-ContrastController {
+      bottom: 120px;
+      left: 30px;
+    }
   }
 }
